﻿zg 06.10.2016 21:01:03 +0200 - build 589

1. LuaFAR: far.CreateUserControl().rawhandle возвращает адрес буфера в виде light userdata.

2. LuaFAR: far.GetDlgItem[6] для DI_USERCONTROL возвращает адрес буфера в виде light userdata.

zg 01.10.2016 15:20:33 +0200 - build 588

1. moonscript 0.5.0.

zg 01.10.2016 15:07:26 +0200 - build 587

1. LuaFAR: в таком коде
   buffer=far.CreateUserControl(10,10)
   buffer[1]={Char="1"}
   вместо 1 выводился символ с кодом 1.

shmuel 29.09.2016 18:57:45 +0200 - build 586

1. LuaFAR: улучшено сообщение об ошибке при передаче аргумента - несуществующего флага типа string.
   Сообщение теперь включает в себя переданный флаг.

shmuel 25.09.2016 21:29:41 +0200 - build 585

1. Продолжение 584: заменяем в traceback табы тремя пробелами - для лучшего восприятия.

shmuel 25.09.2016 00:04:30 +0200 - build 584

1. M#3013: Отображать traceback при ошибках, возникающих в процессе загрузки макрофайлов.

shmuel 06.09.2016 09:45:50 +0200 - build 583

1. MCT_GETMACRO дополнительно возвращает информацию о том, является ли макрос клавиатурным.

shmuel 22.08.2016 19:14:55 +0200 - build 582

1. LuaFAR: BreakKey в far.Menu() сделан полностью регистронезависимым.

shmuel 13.08.2016 18:24:05 +0200 - build 581

1. Уточнения 579,580.

shmuel 18.07.2016 17:55:32 +0200 - build 580

1. Макро-браузер отображает поле "id" в диалоге информации о макросе.

shmuel 18.07.2016 15:59:19 +0200 - build 579

1. В таблицы определений Macro и Event добавлено опциональное поле "id" типа string.

shmuel 04.07.2016 17:35:59 +0200 - build 578

1. LuaFAR: добавлена функция win.GetKeyState.

shmuel 26.06.2016 19:28:14 +0200 - build 577

1. Уточнение 576.2.

shmuel 26.06.2016 16:39:39 +0200 - build 576

1. Расширение возможностей функции Panel.SetCustomSortMode().

2. Расширение возможностей функции Panel.CustomSortMenu().

shmuel 14.06.2016 14:26:10 +0200 - build 575

1. LuaFAR (generic plugin): ExitFARW экспортируется всегда (убраны директивы условной компиляции).
