@@ -155,6 +155,7 @@ enum MACRO_OP_CODE
 	MCODE_F_SETCUSTOMSORTMODE,        //
 	MCODE_F_KEYMACRO,                 //
 	MCODE_F_FAR_GETCONFIG,            //
+	MCODE_F_MACROSETTINGS,            //
 
 	MCODE_F_LAST,                     // marker
 
