@@ -1141,6 +1141,7 @@ string __MCODE_ToName(DWORD OpCode)
 		DEF_MCODE_(F_SETCUSTOMSORTMODE),        //
 		DEF_MCODE_(F_KEYMACRO),                 //
 		DEF_MCODE_(F_FAR_GETCONFIG),            //
+		DEF_MCODE_(F_MACROSETTINGS),            //
 		DEF_MCODE_(C_AREA_OTHER),               // Режим копирования текста с экрана, вертикальные меню
 		DEF_MCODE_(C_AREA_SHELL),               // Файловые панели
 		DEF_MCODE_(C_AREA_VIEWER),              // Внутренняя программа просмотра
