@@ -1,6 +1,11 @@
+shmuel 20.10.2016 19:36:54 +0200 - build 4829
+
+1. M#3275: Allow plugins to load and edit unsaved macro
+   Макробраузер при нажатии F4/AltF4 на несохранённом клавиатурном макросе вызывает фаровский диалог "Macro settings".
+
 drkns 20.10.2016 01:41:37 +0200 - build 4828
 
-1. Очередные танцы вокруг Maximise/Resore и Alt+F9.
+1. Очередные танцы вокруг Maximise/Restore и Alt+F9.
 
 svs 17.10.2016 11:50:09 +0300 - build 4827
 
